tests/test2/fail/fail-matrixBinop6.m2
int main(){
	matrix int [1][2] m;
	float a;
	m[0][0] = 1;
	m[0][1] = 2;
	a = 9.0;

	a - m;

	return 0;
}